style.css
html, body {
  height: 100vh;
  width: 100vw;
}

.splash-page{
  background: url(images/bobby-hendry-304875-unsplash.jpeg) no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: repeat(3, 1fr);
  height: 100vh;
  width: 100vw;
}

nav{
  grid-column: 1/ 4;
  grid-row: 1 / 2;
  padding: 0px 20px;
  background-color: rgba(79, 195, 247, .75);
}

a.brand-logo{
  font-family: 'Courgette', cursive;
  font-size: 48px;
}

a.nav-li{
  font-size: 25px;
  font-family: 'Bree Serif', serif;
}

a.nav-li:hover{
  background-color: white;
  color: #4FC3F7;
}

.user-view{
  background-image: url(images/derek-story-607169-unsplash.jpg);
  background-size: cover;
  background-repeat: no-repeat;
}

.subheader{
  grid-column: 1 / 4;
  grid-row: 3 / 4;
  padding: 0px 20px;
  margin-top: 3%;
}

.subheader-text{
  color: white;
}

.section{
  height: 50vh;
  width: 100vw;
}

i.material-icons{
  background-color: #4FC3F7;
}

i.material-icons:hover{
  background-color: white;
  color: #4FC3F7;
}

.hide{
  display: none;
}

/* About */
.img1{
  height: 45vh;
  width: 45vw;
  background-image: url("images/adi-goldstein-767040-unsplash.jpg");
  background-position: center;
  background-size: cover;
}

/* Play */
.img2{
  height: 45vh;
  width: 45vw;
  background-image: url("images/4k-wallpaper-adult-black-and-white-1489126.jpeg");
  background-position: center;
  background-size: cover;
}

/* Compose */
.img3{
  height: 45vh;
  width: 45vw;
  background-image: url("images/john-hult-93012-unsplash.jpeg");
  background-position: center;
  background-size: cover;
}

/* Write */
.img4{
  height: 45vh;
  width: 45vw;
  background-image: url("images/adi-goldstein-767040-unsplash.jpg");
  background-position: center;
  background-size: cover;
}

/* Perform */
.img5{
  height: 45vh;
  width: 45vw;
  background-image: url("images/beard-blur-boy-167382.jpeg");
  background-position: center;
  background-size: cover;
}

@media only screen and (max-width: 455px){

  a.brand-logo{
    display: none;
  }

  .mobile-header{
    grid-column: 1/4;
    grid-row: 1/2;
  }

  .mobile-header-text{
    font-family: 'Courgette', cursive;
    color: white;
    font-size: 38px;
  }

  .splash-page{
    height: 100vh;
    width: 100vw;
  }

  .img1, .img2, .img3, .img4, .img5{
    display: none;
  }

}

